Version 3.1 - 11 January 2022
    - Added pyqpp, a Python wrapper around Quantum++. See
      https://github.com/softwareQinc/qpp/wiki/8.-pyqpp for more details.
    - Minor update of Shor's algorithm example ["examples/shor.cpp"]
    - Renamed ["examples/qasm/qasm.cpp"] to ["examples/qasm/qpp_qasm.cpp"]
    - Due to phase discrepancies, by default the parser now uses Qiskit
      definitions (which are also the usual ones used in QC textbooks). To
      switch to standard OpenQASM 2.0 gate definitions, configure the project
      with `cmake -DUSE_OPENQASM2_SPECS=ON`.
    - Implemented qpp::QCircuit::
          get_dirty_dits()       - vector of used classical dits in the circuit
                                   (by either cCTRL or measurements)
          get_dirty_qudits()     - vector of used qudits in the circuit
          get_measured_nd()      - vector of qudits that were measured
                                   non-destructively
          get_measurement_dits() - vector of classical dits that participated in
                                   measurements
          is_measurement_dit()   - whether a classical dit participated in a
                                   measurement
    - Changed the ordering of bits in qpp::Bit_circuit::display(), so that the
      zero-th bit (top bit) is now the leftmost bit in the textual
      representation. That is, qpp::Bit_circuit assumes big-endian order.
    - Bugfixes

Version 3.0 - 5 October 2021
    - Major release, bumped up C++ standard to C++17
    - Decoupled the OpenQASM parser from the main codebase. A hard copy of
      qasmtools (https://github.com/softwareQinc/qasmtools) is now common to
      both staq and Quantum++, and by default uses standard OpenQASM 2.0 gate
      definitions. To switch to Qiskit definitions (which are also the usual
      ones used in QC textbooks), configure the project with
      `cmake -DUSE_QISKIT_SPECS=ON`.