@@ -7,9 +7,7 @@
 int main() {
     using namespace qpp;
 
-    std::cout << ">> Classical reversible circuits. ";
-    std::cout << "Bits are labeled from right to left,\n   ";
-    std::cout << "i.e., bit zero is the least significant bit (rightmost).\n";
+    std::cout << ">> Classical reversible circuits (1)\n";
 
     Dynamic_bitset bits{4};                             // 4 classical bits
     std::cout << ">> Initial bitset: " << bits << '\n'; // display them
