@@ -1,3 +1,6 @@
+Pre-release:
+    - Added from-string constructor for qpp::Bit_circuit and qpp::Dynamic_bitset
+
 Version 3.1 - 11 January 2022
     - Added pyqpp, a Python wrapper around Quantum++. See
       https://github.com/softwareQinc/qpp/wiki/8.-pyqpp for more details.
